<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview categoria -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/EstiloCategoria" />

        <!-- Campos Entrada -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Nombre de campo -->
            <EditText
                android:id="@+id/editar_nombre_mascota"
                android:hint="@string/hint_pet_name"
                android:inputType="textCapWords"
                style="@style/EstiloCampoEditor" />

            <!-- Nombre raza -->
            <EditText
                android:id="@+id/editar_raza_mascota"
                android:hint="@string/hint_pet_breed"
                android:inputType="textCapWords"
                style="@style/EstiloCampoEditor" />
        </LinearLayout>
    </LinearLayout>

    <!-- categoria Genero -->
    <LinearLayout
        android:id="@+id/container_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_gender"
            style="@style/EstiloCategoria" />

        <!-- Campo de entrada -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Spinner de genero -->
            <Spinner
                android:id="@+id/spinner_genero"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Categoria Medidas -->
    <LinearLayout
        android:id="@+id/container_measurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_measurement"
            style="@style/EstiloCategoria" />

        <!-- Campo Entrada -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Campo Peso -->
            <EditText
                android:id="@+id/editar_peso_mascota"
                android:hint="@string/hint_pet_weight"
                android:inputType="number"
                style="@style/EstiloCampoEditor" />

            <!-- Unidades De peso (kg) -->
            <TextView
                android:id="@+id/label_weight_units"
                android:text="@string/unit_pet_weight"
                style="@style/EditorUnidadeEstilo"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
